# cpp_framework

./: CMakeLists.txt  README.md  generate.sh
cfg/: test_json_file.json  test_log.yml
doc/: frame_design.md
src/: config.cpp  config.h  singleton.h  util.cpp  util.h
test/: c_poly.c  generate-CA.sh  test_cmd.cpp  test_config.cpp  test_config_serverCfg.cpp  test_config_serverCfg.h  test_httplib_dowload.cpp  test_json-c.c  test_mxml.c  test_nhlohman_json_xml.cpp  test_terminal.cpp  test_terminal_input.cpp  test_util.cpp  test_variable_args.c
test/http/: test_httpclient_file_upload.cpp  test_httpserver_file_download.cpp
